--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,14 +1,14 @@
 wx:
   mp:
     configs:
-      - appId: wxbe045ae960147da1
-        secret: 6a250ac59d3f4c775f99a288a904bc6d
+      - appId: wx738d5cd928816fa0
+        secret: 4e262bf21fb03bc20a5140ed2a888f5f
         token: hcliu
         aesKey: LHznZTiUOlwohmxktYHFlFQJYnQMeCFPCw8J2QsUHGK
 
 server:
   port: 80
-
+  url:  http://f6e89853.natappfree.cc
 
 
 
