--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ wx:
         aesKey: LHznZTiUOlwohmxktYHFlFQJYnQMeCFPCw8J2QsUHGK
 server:
   port: 80
-  url:  http://f6e89853.natappfree.cc:80  # 配置您的实际域名
+  url:  http://47.103.2.139  # 配置您的实际域名
 
 
 
